Changes to Research and Teaching page

--- a/Research.html
+++ b/Research.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h2>My Research</h2>
-    This is my research page.
+    <hr>
+    This is my research page. My research covers different areas.
 </body>
 </html>
