--- a/Contact.html
+++ b/Contact.html
@@ -9,5 +9,7 @@
 <body>
     <h2>My contact information</h2>
     <hr>
+    Phone number: +852 9xxx xxxx <br />
+    email: hcloaa@connect.ust.hk <br />
 </body>
 </html>
