--- a/Teaching.html
+++ b/Teaching.html
@@ -9,6 +9,7 @@
 <body>
     <h2>Teaching</h2>
     <hr>
-    ECON Money and Banking 
+    I have been a teachign assistant for six years. I teach undergraduate Economic courses. My main duty is to hold tutorial. <br />
+    ECON Money and Banking <br />
 </body>
 </html>
