--- a/Teaching.html
+++ b/Teaching.html
@@ -10,6 +10,12 @@
     <h2>Teaching</h2>
     <hr>
     I have been a teachign assistant for six years. I teach undergraduate Economic courses. My main duty is to hold tutorial. <br />
-    ECON Money and Banking <br />
+    1. Money and Banking <br />
+    2. Macroeconomics <br />
+
+    <p> 
+        In addition to the undergraduate Economic courses, I have written notes for Mathematics, 
+        Physics and Machine Learning courses. Topics include:
+    </p>
 </body>
 </html>
