Add something to Teaching

--- a/Teaching.html
+++ b/Teaching.html
@@ -17,5 +17,7 @@
         In addition to the undergraduate Economic courses, I have written notes for Mathematics, 
         Physics and Machine Learning courses. Topics include:
     </p>
+    <p>Stochastic Calculus </p>
+    <p>Quantum Mechanics</p>
 </body>
 </html>
