Add the button bar.

--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,15 @@
 <body>
     <h2>My contact information</h2>
     <hr>
-    Phone number: +852 9xxx xxxx <br />
-    email: hcloaa@connect.ust.hk <br />
+    <a href="/index.html">Home</a>
+    <a href="/Research.html">Research</a>
+    <a href="/Teaching.html">Teaching</a>
+    <a href="/Contact.html">Contact</a>
+    <hr>
+
+    <p>
+        Phone number: +852 9xxx xxxx <br />
+        email: hcloaa@connect.ust.hk <br />
+    </p>
 </body>
 </html>
