--- a/Research.html
+++ b/Research.html
@@ -9,6 +9,12 @@
 <body>
     <h2>My Research</h2>
     <hr>
-    This is my research page. My research covers different areas.
+    <a href="/index.html">Home</a>
+    <a href="/Research.html">Research</a>
+    <a href="/Teaching.html">Teaching</a>
+    <a href="/Contact.html">Contact</a>
+    <p>
+        This is my research page. My research covers different areas.
+    </p>
 </body>
 </html>
