--- a/Teaching.html
+++ b/Teaching.html
@@ -9,10 +9,17 @@
 <body>
     <h2>Teaching</h2>
     <hr>
-    I have been a teachign assistant for six years. I teach undergraduate Economic courses. My main duty is to hold tutorial. <br />
-    1. Money and Banking <br />
-    2. Macroeconomics <br />
+    <a href="/index.html">Home</a>
+    <a href="/Research.html">Research</a>
+    <a href="/Teaching.html">Teaching</a>
+    <a href="/Contact.html">Contact</a>
 
+    <p>
+        I have been a teachign assistant for six years. I teach undergraduate Economic courses. My main duty is to hold tutorial. <br />
+        1. Money and Banking <br />
+        2. Macroeconomics <br />
+    </p>
+    
     <p> 
         In addition to the undergraduate Economic courses, I have written notes for Mathematics, 
         Physics and Machine Learning courses. Topics include:
