--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         3. Time-Series Econometrics <br />
         4. Machine learning application on financial market <br />
         <br />
-        Moreover, I also have strong interest on Mathematics, Physics and Computer Science. I have brief experience on research in the following topics: <br />
+        Moreover, I also have strong interest in Mathematics, Physics and Computer Science. I have brief experience on research in the following topics: <br />
         1. Stochastic calculus <br />
         2. Reinforcement learning on gaming development<br />
         3. Machine learning on image processing.<br />
