Add ordered list to index

--- a/index.html
+++ b/index.html
@@ -18,16 +18,20 @@
 
     <h3>Bio</h3>
     <p>
-        I am an Economist who has broad research interest across multiple areas: <br />
-        1. Financial Market <br />
-        2. Monetary Policy <br />
-        3. Time-Series Econometrics <br />
-        4. Machine learning application on financial market <br />
+        I am an Economist who has broad research interest across multiple areas:
+        <ol>
+            <li>Monetary Policy and Financial Market</li>
+            <li>Time-Series Econometrics</li>
+            <li>Numerical solution to Partial-Differential Equation</li>
+            <li>Machine learning application on financial market</li>
+        </ol>
         <br />
-        Moreover, I also have strong interest in Mathematics, Physics and Computer Science. I have brief experience on research in the following topics: <br />
-        1. Stochastic calculus <br />
-        2. Reinforcement learning on gaming development<br />
-        3. Machine learning on image processing.<br />
+        Moreover, I also have strong interest in Mathematics, Physics and Computer Science. I have brief experience on research in the following topics:
+        <ol>
+            <li>Stochastic Calculus</li>
+            <li>Reinforcement learning on gaming development</li>
+            <li>Image processing</li>
+        </ol>
     </p>
 </body>
 </html>
