--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <h3>Bio</h3>
-    <p>
+    <div>
         I am an Economist who has broad research interest across multiple areas:
         <ol>
             <li>Monetary Policy and Financial Market</li>
@@ -32,6 +32,6 @@
             <li>Reinforcement learning on gaming development</li>
             <li>Image processing</li>
         </ol>
-    </p>
+    </div>
 </body>
 </html>
